--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ docs_dir: docs
 copyright: 'Copyright &copy 2020 Lennart Wittkuhn'
 nav:
   - Home: index.md
+  - Environments: environments.md
 markdown_extensions:
     - admonition
     - codehilite:
